# access-to-retro

./: .gitignore  LICENSE  README.md
access-to-retro/: .gitignore  CMakeLists.txt
access-to-retro/chip8-virtual-console/: CMakeLists.txt  Doxyfile
access-to-retro/chip8-virtual-console/src/: config.cpp  threads.cpp
access-to-retro/chip8-virtual-console/src/emulator/: controller.cpp  controller.hpp  cpu.cpp  cpu.hpp  emulator.cpp  emulator.hpp  frame-buffer.cpp  frame-buffer.hpp  gpu.cpp  gpu.hpp  ram-memory.cpp  ram-memory.hpp
access-to-retro/developer-library/: CMakeLists.txt  Doxyfile
access-to-retro/developer-library/include/access-to-retro-dev/: access-to-retro-dev.h  basics.h  c-cpp-required-definitions-helper.h  data.h  game.h  graphics.h  input.h
access-to-retro/developer-library/include/access-to-retro-dev/unit-testing-library/: access-to-retro-unit-testing.h  asserts.h  definitions.h
access-to-retro/developer-library/src/: basics.c  data.c  game.c  graphics.c  input.c
access-to-retro/developer-library/tests/: CMakeLists.txt  data_tests.c
access-to-retro/frontend/: CMakeLists.txt  Doxyfile
access-to-retro/frontend/resources/: appicon_macos.icns  resources.qrc
access-to-retro/frontend/src/app/: app.cpp  app.hpp  main.cpp
access-to-retro/frontend/src/core/: dynamic-library.cpp  dynamic-library.hpp  executable-binary.cpp  executable-binary.hpp  input-handler.cpp  input-handler.hpp  virtual-console.cpp  virtual-console.hpp
access-to-retro/frontend/src/error/: base-exception.cpp  base-exception.hpp  io-error.cpp  io-error.hpp  os-error.cpp  os-error.hpp
access-to-retro/frontend/src/gui/: main-window.cpp  main-window.hpp  main-window.ui
access-to-retro/frontend/src/gui/widgets/: game-selection-item-widget.cpp  game-selection-item-widget.hpp  game-selection-item-widget.ui  sdl-graphics-widget.cpp  sdl-graphics-widget.hpp  virtual-console-selection-item-widget.cpp  virtual-console-selection-item-widget.hpp  virtual-console-selection-item-widget.ui
access-to-retro/frontend/src/gui/windows/: about-dialog.cpp  about-dialog.hpp  about-dialog.ui  first-time-setup-dialog.cpp  first-time-setup-dialog.hpp  first-time-setup-dialog.ui  gameplay-window.cpp  gameplay-window.hpp  gameplay-window.ui  input-ask-for-key-dialog.cpp  input-ask-for-key-dialog.hpp  input-ask-for-key-dialog.ui  input-settings-dialog.cpp  input-settings-dialog.hpp  input-settings-dialog.ui  manager-dialog.cpp  manager-dialog.hpp  manager-dialog.ui  settings-dialog.cpp  settings-dialog.hpp  settings-dialog.ui  virtual-console-and-game-picker-dialog.cpp  virtual-console-and-game-picker-dialog.hpp  virtual-console-and-game-picker-dialog.ui
access-to-retro/frontend/src/helpers/: cross-platform-helper.cpp  cross-platform-helper.hpp  io-helper.cpp  io-helper.hpp  qt-helper.cpp  qt-helper.hpp  standard-helper.cpp  standard-helper.hpp  string-helper.cpp  string-helper.hpp  types.hpp
access-to-retro/frontend/src/util/: logger.cpp  logger.hpp  settings-manager.cpp  settings-manager.hpp  time.cpp  time.hpp
access-to-retro/scripts/: create-virtual-console-app.py
documentation/code/chip8-virtual-console/html/: annotated.html  classar_1_1chip8_1_1controller-members.html  classar_1_1chip8_1_1controller.html  classar_1_1chip8_1_1cpu-members.html  classar_1_1chip8_1_1cpu.html  classar_1_1chip8_1_1emulator-members.html  classar_1_1chip8_1_1emulator.html  classar_1_1chip8_1_1frame__buffer-members.html  classar_1_1chip8_1_1frame__buffer.html  classar_1_1chip8_1_1gpu-members.html  classar_1_1chip8_1_1gpu.html  classar_1_1chip8_1_1ram__memory-members.html  classar_1_1chip8_1_1ram__memory.html  classes.html  config_8cpp.html  controller_8hpp.html  controller_8hpp_source.html  cpu_8hpp.html  cpu_8hpp_source.html  dir_6ccc19cd7721d84872e67a4fb7cacbe0.html  dir_863175ccb95f85366f26753e8ebe3586.html  dir_a68269130ededd20a7a98800d462bc4d.html  emulator_8hpp.html  emulator_8hpp_source.html  files.html  frame-buffer_8hpp_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  gpu_8hpp.html  gpu_8hpp_source.html  index.html  menudata.js  namespacear_1_1chip8.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_vars.html  namespaces.html  (+3 more)
documentation/code/chip8-virtual-console/latex/: annotated.tex  classar_1_1chip8_1_1controller.tex  classar_1_1chip8_1_1cpu.tex  classar_1_1chip8_1_1emulator.tex  classar_1_1chip8_1_1frame__buffer.tex  classar_1_1chip8_1_1gpu.tex  classar_1_1chip8_1_1ram__memory.tex  config_8cpp.tex  controller_8hpp.tex  controller_8hpp_source.tex  cpu_8hpp.tex  cpu_8hpp_source.tex  emulator_8hpp.tex  emulator_8hpp_source.tex  files.tex  frame-buffer_8hpp_source.tex  gpu_8hpp.tex  gpu_8hpp_source.tex  namespacear_1_1chip8.tex  namespaces.tex  ram-memory_8hpp.tex  ram-memory_8hpp_source.tex  refman.tex  threads_8cpp.tex
documentation/code/developer-library/html/: access-to-retro-dev_8h.html  access-to-retro-dev_8h_source.html  annotated.html  basics_8h.html  basics_8h_source.html  c-cpp-required-definitions-helper_8h.html  c-cpp-required-definitions-helper_8h_source.html  classes.html  data_8h_source.html  dir_337e63c40fe64381d92803c59360ae0a.html  dir_53577d517835e6d246a8d52feee4e509.html  dir_7f933536a1722d96ce68cbcf08939388.html  files.html  functions.html  functions_vars.html  game_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graphics_8h.html  graphics_8h_source.html  group__group__basics.html  group__group__data.html  group__group__def.html  group__group__game.html  group__group__graphics.html  group__group__input.html  group__group__root.html  index.html  input_8h.html  input_8h_source.html  menudata.js  modules.html  structar__bit-members.html  structar__bit.html  structar__executable-members.html  structar__executable.html  (+6 more)
documentation/code/developer-library/latex/: access-to-retro-dev_8h.tex  access-to-retro-dev_8h_source.tex  annotated.tex  basics_8h.tex  basics_8h_source.tex  c-cpp-required-definitions-helper_8h.tex  data_8h_source.tex  (+21 more)
(+460 files in other folders)
